Update on Overleaf.

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -1,8 +1,8 @@
 \begin{figure}[tb]
   \centering
-  \includegraphics{../kfac_pinns_exp/exp17_groupplot_poisson2d/loss.pdf}
-  \caption{Scaling behaviour of different optimizers for learning the solution of a 2d-Poisson equation w.r.t.
-    neural network size under a given time budget of $10^3\,\text{s}$ on an RTX 6000 GPU.}
+  \includegraphics{../kfac_pinns_exp/exp18_groupplot_poisson5d/loss.pdf}
+  \caption{Scaling behaviour of different optimizers for learning the solution of a 5d-Poisson equation w.r.t.
+    neural network size under a given time budget of $3\cdot 10^3\,\text{s}$ on an RTX 6000 GPU.}
   \label{fig:pedagogical-example}
 \end{figure}
 
