Update on Overleaf.

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -78,6 +78,7 @@
     %    u(t,x) & = 0 \quad \text{for } t\in[0,1], x\in\partial[0,1]^{100}
     %\end{align*}
     %\item an alternative would be
+    \todo{rhs not equal zero I think, double check before implementing}
     \begin{align*}
         \partial_t u(t,x)-\Delta_x u(t,x) & = 0 \quad \text{for } x\in [0,1]^{100} \\
         u(0,x) & = \sum_{i=1}^{100} \sin(\pi x_i) \quad \text{for }
