[TEX] Describe details of KFAC and KFAC* [no ci]

--- a/paper/preamble/goodfellow.tex
+++ b/paper/preamble/goodfellow.tex
@@ -486,6 +486,7 @@
 \DeclareMathOperator{\overlap}{overlap}
 \DeclareMathOperator{\Cat}{Cat}
 \DeclareMathOperator{\flatten}{vec}
+\DeclareMathOperator{\blockdiag}{blockdiag}
 
 %%%%% NEW MATH DEFINITIONS %%%%%
 \newcommand{\jac}{\mathrm{J}}
