--- a/paper/references.bib
+++ b/paper/references.bib
@@ -409,52 +409,102 @@
 }
 
 @article{stokes2020quantum,
-  title={Quantum natural gradient},
-  author={Stokes, James and Izaac, Josh and Killoran, Nathan and Carleo, Giuseppe},
-  journal={Quantum},
-  volume={4},
-  pages={269},
-  year={2020},
-  publisher={Verein zur F{\"o}rderung des Open Access Publizierens in den Quantenwissenschaften}
+  title =        {Quantum natural gradient},
+  author =       {Stokes, James and Izaac, Josh and Killoran, Nathan and Carleo,
+                  Giuseppe},
+  journal =      {Quantum},
+  volume =       4,
+  pages =        269,
+  year =         2020,
+  publisher =    {Verein zur F{\"o}rderung des Open Access Publizierens in den
+                  Quantenwissenschaften}
 }
 
 @article{webber2022rayleigh,
-  title={Rayleigh-Gauss-Newton optimization with enhanced sampling for variational Monte Carlo},
-  author={Webber, Robert J and Lindsey, Michael},
-  journal={Physical Review Research},
-  volume={4},
-  number={3},
-  pages={033099},
-  year={2022},
-  publisher={APS}
+  title =        {Rayleigh-Gauss-Newton optimization with enhanced sampling for
+                  variational Monte Carlo},
+  author =       {Webber, Robert J and Lindsey, Michael},
+  journal =      {Physical Review Research},
+  volume =       4,
+  number =       3,
+  pages =        033099,
+  year =         2022,
+  publisher =    {APS}
 }
 
 @article{kunstner2019limitations,
-  title={Limitations of the empirical fisher approximation for natural gradient descent},
-  author={Kunstner, Frederik and Hennig, Philipp and Balles, Lukas},
-  journal={Advances in neural information processing systems},
-  volume={32},
-  year={2019}
+  title =        {Limitations of the empirical fisher approximation for natural
+                  gradient descent},
+  author =       {Kunstner, Frederik and Hennig, Philipp and Balles, Lukas},
+  journal =      {Advances in neural information processing systems},
+  volume =       32,
+  year =         2019
 }
 
 @article{heskes2000natural,
-  title={On “natural” learning and pruning in multilayered perceptrons},
-  author={Heskes, Tom},
-  journal={Neural Computation},
-  volume={12},
-  number={4},
-  pages={881--901},
-  year={2000},
-  publisher={MIT Press}
+  title =        {On “natural” learning and pruning in multilayered perceptrons},
+  author =       {Heskes, Tom},
+  journal =      {Neural Computation},
+  volume =       12,
+  number =       4,
+  pages =        {881--901},
+  year =         2000,
+  publisher =    {MIT Press}
 }
 
 @article{yu2018deep,
-  title={The deep Ritz method: a deep learning-based numerical algorithm for solving variational problems},
-  author={Yu, Bing and E, Weinan},
-  journal={Communications in Mathematics and Statistics},
-  volume={6},
-  number={1},
-  pages={1--12},
-  year={2018},
-  publisher={Springer}
+  title =        {The deep Ritz method: a deep learning-based numerical
+                  algorithm for solving variational problems},
+  author =       {Yu, Bing and E, Weinan},
+  journal =      {Communications in Mathematics and Statistics},
+  volume =       6,
+  number =       1,
+  pages =        {1--12},
+  year =         2018,
+  publisher =    {Springer}
+}
+
+@article{pearlmutter1994fast,
+  author =       {Pearlmutter, Barak A.},
+  title =        {Fast Exact Multiplication by the {H}essian},
+  journal =      {Neural Computation},
+  year =         1994,
+  tags =         {hessian},
+}
+
+@article{schraudolph2002fast,
+  title =        {Fast curvature matrix-vector products for second-order
+                  gradient descent},
+  author =       {Schraudolph, Nicol N},
+  journal =      {Neural Computation},
+  year =         2002,
+}
+
+@inproceedings{martens2010deep,
+  author =       {Martens, James},
+  year =         2010,
+  title =        {Deep learning via {H}essian-free optimization},
+  booktitle =    {International Conference on Machine Learning (ICML)},
+}
+
+@inproceedings{tatzel2022late,
+  title =        {Late-Phase Second-Order Training},
+  author =       {Tatzel, Lukas and Hennig, Philipp and Schneider, Frank},
+  booktitle =    {Advances in Neural Information Processing Systems (NeurIPS),
+                  Workshop Has it Trained Yet?},
+  year =         2022
+}
+
+@incollection{paszke2019pytorch,
+  title =        {{PyTorch}: An Imperative Style, High-Performance Deep Learning
+                  Library},
+  author =       {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer,
+                  Adam and Bradbury, James and Chanan, Gregory and Killeen,
+                  Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga,
+                  Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward
+                  and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and
+                  Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai,
+                  Junjie and Chintala, Soumith},
+  booktitle =    {Advances in Neural Information Processing Systems (NeurIPS)},
+  year =         2019,
 }
