--- a/paper/sections/contribution.tex
+++ b/paper/sections/contribution.tex
@@ -190,7 +190,7 @@ $\vg_{n, s}^{(l)} = \nabla_{\mZ_{s}^{(l)}} \Delta_\vx\vu_n$ we obtain
     \sum_{s=1}^S \left( \mZ
     ^{(l-1)}_{n,s}\otimes \vg_{n,s}^{(l)} \right)^\top\right]
 \end{equation}
-Now we can use any Kronecker-factored approximation for feedforward networks with weight sharing, where we choose to work with the following. 
+Now we can use any Kronecker-factored approximation for feedforward networks with weight sharing, where we choose to work with the following.
 
 %
 %\paragraph{Kronecker approximation of the PDE Gramian}
@@ -205,13 +205,13 @@ Approximating the inner matrix product of sums in equation~\eqref{eq:laplace_gra
     \otimes
     \left[\sum_{n=1}^N\sum_{s=1}^S \vg^{(l)}_{n,s}{\vg^{(l)}_{n,s}}^\top   \right].
 \end{align}
-This approximation corresponds to the \emph{expand} setting described by~\citet{eschenhagen2023kroneckerfactored}. 
-%\todo{@Felix. Here it would be natural to comment on forward and empirical, right? To my understanding we do not really use the reduce approximation, correct?} 
+This approximation corresponds to the \emph{expand} setting described by~\citet{eschenhagen2023kroneckerfactored}.
+%\todo{@Felix. Here it would be natural to comment on forward and empirical, right? To my understanding we do not really use the reduce approximation, correct?}
 
 \paragraph{Forward KFAC}
-One downside of our approach is that we need to store the full computation graph of the forward Laplacian framework to compute the grad-output-based Kronecker factors. 
-To speed up computation, we can neglect the quantities in the approximation $\hat{\mG}_\Omega^{\textup{exp}}$ that require a backward pass. 
-We call the corresponding approximation \emph{forward KFAC}, which is given by 
+One downside of our approach is that we need to store the full computation graph of the forward Laplacian framework to compute the grad-output-based Kronecker factors.
+To speed up computation, we can neglect the quantities in the approximation $\hat{\mG}_\Omega^{\textup{exp}}$ that require a backward pass.
+We call the corresponding approximation \emph{forward KFAC}, which is given by
 \begin{align}
     \hat{\mG}_\Omega^{\textup{for}}(\mW^{(l)})
     \coloneqq \frac{1}{N^2 S}
@@ -219,12 +219,12 @@ We call the corresponding approximation \emph{forward KFAC}, which is given by
     \otimes
     \mI.
 \end{align}
-Some works find that if setting this factor to $\mI$, the resulting input-based KFAC still yields good performance~\cite{benzing2022gradient,petersen2023isaac}. 
-%\paragraph{Input-based Kronecker approximation:} 
+Some works find that if setting this factor to $\mI$, the resulting input-based KFAC still yields good performance~\cite{benzing2022gradient,petersen2023isaac}.
+%\paragraph{Input-based Kronecker approximation:}
 
 \paragraph{Empirical KFAC}
-... how does this look? ... 
-probably move to appendix or simply say it can be done in the future... 
+... how does this look? ...
+probably move to appendix or simply say it can be done in the future...
 
 
 %\paragraph{The reduce approximation}
@@ -244,7 +244,7 @@ probably move to appendix or simply say it can be done in the future...
 %\paragraph{Empirical and non empirical Gramians}
 
 \paragraph{Combining PDE and boundary Gramian}
-One way is to keep both Kronecker approximations separate, but then we need to invert a sum of two Kronecker products. 
+One way is to keep both Kronecker approximations separate, but then we need to invert a sum of two Kronecker products.
 This can be done, see \Cref{sec:inverse_kronecker_sum}, but adds twice the memory overhead compared to having a single Kronecker approximation.
 
 
@@ -318,7 +318,7 @@ We can express this in matrix notation as $\mF(\mW^{(l)}) \approx \nicefrac{1}{S
 
 \subsection{General preconditioned PDE methods}
 %\paragraph{Setting}
-We consider the general %second-order 
+We consider the general %second-order
 PDE
 \begin{equation}
     %\Psi(u, \nabla u, \nabla^{2} u) = 0,
@@ -353,7 +353,7 @@ Writing $v_\vtheta(\vx)\coloneqq (%u_\vtheta(\vx), \nabla u_\vtheta(\vx), \nabla
 u(\vx), \partial u(\vx), \dots, \partial^{(k)} u(\vx))$
 we can express the Gauß-Newton matrix as
 \begin{align}
-    \mG(\vtheta) & = \frac1N\sum_{n=1}^N \jac_\vtheta v_\vtheta(\vx_n)^\top \underbrace{\jac \Psi(v_\vtheta(\vx_n))^\top \mLambda(r_\vtheta(\vx_n)) \jac \Psi(v_\vtheta(\vx_n))}_{\eqqcolon \mH(\vtheta, \vx_n)}  \jac_\vtheta v_\vtheta(\vx_n), 
+    \mG(\vtheta) & = \frac1N\sum_{n=1}^N \jac_\vtheta v_\vtheta(\vx_n)^\top \underbrace{\jac \Psi(v_\vtheta(\vx_n))^\top \mLambda(r_\vtheta(\vx_n)) \jac \Psi(v_\vtheta(\vx_n))}_{\eqqcolon \mH(\vtheta, \vx_n)}  \jac_\vtheta v_\vtheta(\vx_n),
 \end{align}
 and $v_\vtheta$ is a forward network with shared weights.
 The reduce approximation is then given by
@@ -382,13 +382,68 @@ The reduce approximation is then given by
 \todo[inline]{what can we say? probably better to move to the respective approximations}
 \begin{itemize}
     \item GN: $O(p^3+Np^2)$
-    \item BFGS: $O(p^2+?)$ 
+    \item BFGS: $O(p^2+?)$
     \item L-BFGS: $O(mp+?)$?
-    \item KFAC: $O(?)$ 
-    \item  
+    \item KFAC: $O(?)$
+    \item
 \end{itemize}
 \end{comment}
 
+\subsection{Algorithmic Details}
+
+Here we provide the additional components that form our presented KFAC-based optimization algorithms.
+Their design is heavily influenced by ENGD and the orginal KFAC algorithm.
+See Appendix ?? for pseudo-code.
+
+\paragraph{Kronecker factors and exponential moving averages} Given a combination of interior and condition loss, $\gL_{\Omega},\gL_{\partial\Omega}$ we approximate each their Gramians $\mG_{\Omega,t}, \mG_{\partial \Omega, t}$ at iteration $t$ with a block-diagonal Kronecker-factored computed as described in Section ??,
+\begin{align*}
+  \mG_{\bullet, t}
+  &\approx
+    \blockdiag
+    \left(
+    \hat{\mA}^{(1)}_{\bullet,t} \otimes \hat{\mB}_{\bullet,t}^{(1)},
+    \dots,
+    \hat{\mA}^{(L)}_{\bullet,t} \otimes \hat{\mB}_{\bullet,t}^{(L)}
+    \right)
+    \qquad \bullet \in \{ \Omega, \partial\Omega\}\,.
+\end{align*}
+where the Kronecker factors are given by an exponential moving average $\beta$ over all previous Kronecker factors, i.e.\,$\hat{\mA}^{(l)}_{\bullet,t} = \beta \hat{\mA}^{(l)}_{\bullet,t-1} + (1 - \beta) \mA^{(l)}_t$ with $\mA^{(l)}_{\bullet, t}$ as defined in ?? and identically for $\hat{\mB}^{(l)}_{\bullet, t}$.
+
+\paragraph{Gradient pre-conditioning and damping}
+Given the current mini-batch gradient $\vg^{(l)}$ for layer $l$, we pre-condition it with our KFAC approximated Gramian to obtain a proposed update direction.
+First, we add constant damping of strength $\lambda$ to all Kronecker factors, obtaining $\tilde{\mA}_t = \hat{\mA}^{(l)}_{\bullet,t} + \lambda \mI$ and $\tilde{\mB}_{\bullet,t} = \hat{\mB}^{(l)}_{\bullet,t} + \lambda \mI$.
+Then, we multiply the inverse of the sum of Kronecker products onto the gradient to obtain the update direction $\vDelta_t = -(\tilde{\mA}_{\Omega} \otimes \tilde{\mB}_{\Omega} + \tilde{\mA}_{\partial\Omega} \otimes \tilde{\mB}_{\partial\Omega})^{-1} \vg^{(l)}$.
+This can be done without building up the full matrix; multiplying with the inverse of the curvature approximation requires a generalized eigen-decomposition.
+
+\paragraph{Learning rate selection and momentum}
+We experimented with two different flavours to obtain the update $\vdelta_{t+1} = \vtheta_{t+1} - \vtheta_t$ at iteration $t$ from the pre-conditioned gradient $\vDelta_t$; we will refer to them as `KFAC' and `KFAC*'.
+KFAC, keeps an momentum buffer of all previous updates, $\hat{\vdelta}_t = \mu \vdelta_{t-1} + \vDelta_t$ (similar to momentum in SGD).
+The momentum parameter is tuned manually in our experiments via random search.
+Like in ENGD, we obtain the final update by logarithmic grid line search along $\hat{\vdelta}_t$, i.e.\,choosing$\vdelta_t = \alpha_{\star} \hat{\vdelta}_t$ where $\alpha_{\star} = \argmin_{\alpha} \gL(\vtheta_t + \alpha \hat{\vdelta}_t$ where $\alpha \in \{2^{-30}, \dots, 2^0\}$.
+KFAC* uses the learning rate and momentum heuristic that is employed by the original KFAC optimizer~\cite{martens2015optimizing}.
+It parameterizes the iteration's update as $\vdelta_{t+1}(\alpha, \mu) = \alpha \vDelta_t + \mu \vdelta_t$, then obtains the optimal parameters by minimizing the quadratic model $m(\vdelta_{t+1}) = \gL(\vtheta_t) + \vdelta_{t+1}^{\top} \nabla_{\vtheta_t}\gL(\vtheta_t) + \nicefrac{1}{2}\vdelta_{t+1}^{\top} (\mG(\vtheta_t) + \lambda \mI) \vdelta_{t+1}$ with the true damped Gramian.
+The optimal learning rate and momentum $\argmin_{\alpha, \mu} m(\vdelta_t)$ are given by~(see \citep[][Section 7]{martens2015optimizing} for details)
+\begin{align}
+  \begin{pmatrix}
+    \alpha^{\star} \\ \mu^{\star}
+  \end{pmatrix}
+  =
+  -
+  \begin{pmatrix}
+    \vDelta_t^{\top} \mG \vDelta_t + \lambda \left\lVert \vDelta_t \right\rVert^2
+    & \vDelta_t \mG \vdelta_t + \lambda \vDelta^{\top}_t \vdelta_t
+    \\
+    \vDelta_t \mG \vdelta_t + \lambda \vDelta^{\top}_t \vdelta_t
+    &
+      \vdelta_t^{\top} \mG \vDelta_t + \lambda \left\lVert \vdelta_t \right\rVert^2
+  \end{pmatrix}^{-1}
+  \begin{pmatrix}
+    \vDelta_t \nabla_{\vtheta_t} \gL
+    \\
+    \vdelta_t \nabla_{\vtheta_t} \gL
+  \end{pmatrix}\,.
+\end{align}
+The computational cost is dominated by the two Gramian-vector products $\mG \vDelta_t$ and $\mG \vdelta_t$ which can be performed with automatic differentiation~\cite{pearlmutter1994fast,schraudolph2002fast}.
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../main"
